<resources>
    <string name="app_name">易课堂</string>
    <string name="str_account">请输入用户名</string>
    <string name="str_password">请输入密码</string>
    <string name="login_in">登  录</string>
    <string name="number_and_letter">
        0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.
    </string>
    <string name="home">首页</string>
    <string name="talk_area">讨论区</string>
    <string name="personal_info">我</string>
    <string name="message">消息</string>

    <string name="title_activity_my_class">MyClass</string>
    <string name="title_activity_join_class">JoinClass</string>

    <!--    课程表-->
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>

    <string-array name="weekday">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>

    <string-array name="time">
        <item>第一节(8:00~9:50)</item>
        <item>第二节(10:10~12:00)</item>
        <item>第三节(12:10~14:00)</item>
        <item>第四节(14:10~16:00)</item>
        <item>第五节(16:20~18:10)</item>
        <item>第六节(19:00~20:50)</item>
        <item>第七节(21:10~22:00)</item>
    </string-array>
</resources>

