<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="60dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="80dp"
            android:src="@drawable/ic_launcher"/>
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="3"
            android:text="@string/app_name"
            android:textColor="@color/color_1afa29"
            android:textSize="40sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <ImageView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="2dp"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:src="@drawable/ic_account"/>
        <EditText
            android:id="@+id/text_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="50dp"
            android:maxLines="1"
            android:digits="@string/number_and_letter"
            android:hint="@string/str_account"
            android:textColor="@color/deep_gray"
            android:textColorHint="#A9A9A9"
            android:textCursorDrawable="@drawable/cursor_color"
            android:theme="@style/EditTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="2dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_password"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="50dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:id="@+id/text_password"
            android:hint="@string/str_password"
            android:textColor="@color/deep_gray"
            android:textColorHint="#A9A9A9"
            android:textCursorDrawable="@drawable/cursor_color"
            android:theme="@style/EditTextStyle"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:text="登  录"
        android:id="@+id/button_login_in"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:background="@drawable/button"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:id="@+id/button_forget_psw"
            android:text="忘记密码?"
            android:textColor="@color/color_1afa29" />

<!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->

<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:layout_marginEnd="0dp"-->
<!--            android:layout_marginRight="0dp"-->
<!--            android:background="@null"-->
<!--            android:id="@+id/button_sign_up"-->
<!--            android:text="用户注册"-->
<!--            android:textColor="@color/color_1296db" />-->

    </FrameLayout>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="22dp"
           android:gravity="center"
           android:text="登录即代表同意并阅读服务协议" />
   </RelativeLayout>



</LinearLayout>