<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/user_border">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/menu"
        android:padding="0dp">


        <ImageView
            android:id="@+id/back_home_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_back" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="课程表"
            android:textColor="@color/color_1afa29"
            android:textSize="19sp" />

    </RelativeLayout>
    <TableLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:id="@+id/course_table"
        tools:context="com.example.teacherclient.CourseTable">

        <TableRow
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <ImageView
                android:id="@+id/add_new_course"
                style="@style/course_table_menu"
                android:src="@drawable/ic_add_course"
                android:layout_weight="1"/>
            <TextView
                style="@style/course_table_menu"
                android:text="@string/monday"
                android:layout_weight="1" />
            <TextView
                style="@style/course_table_menu"
                android:layout_weight="1"
                android:text="@string/tuesday"
                />
            <TextView
                style="@style/course_table_menu"
                android:text="@string/wednesday"
                android:layout_weight="1"/>
            <TextView
                style="@style/course_table_menu"
                android:text="@string/thursday"
                android:layout_weight="1"/>
            <TextView
                style="@style/course_table_menu"
                android:text="@string/friday"
                android:layout_weight="1"/>
            <TextView
                style="@style/course_table_menu"
                android:text="@string/saturday"
                android:layout_weight="1"/>
            <TextView
                style="@style/course_table_menu"
                android:text="@string/sunday"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:orientation="horizontal"
            android:layout_weight="2"
            >
            <TextView
                style="@style/course_table_menu"
                android:text="第一节\n8:00\n~\n9:50"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_1_1"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_2_1"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_3_1"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_4_1"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_5_1"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_6_1"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_7_1"
                style="@style/course_table_item"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:orientation="horizontal"
            android:layout_weight="2"
            >
            <TextView
                style="@style/course_table_menu"
                android:text="第二节\n10:10\n~\n12:00"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_1_2"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_2_2"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_3_2"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_4_2"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_5_2"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_6_2"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_7_2"
                style="@style/course_table_item"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:orientation="horizontal"
            android:layout_weight="2"
            >
            <TextView
                style="@style/course_table_menu"
                android:text="第三节\n12:10\n~\n14:00"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_1_3"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_2_3"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_3_3"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_4_3"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_5_3"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_6_3"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_7_3"
                style="@style/course_table_item"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:orientation="horizontal"
            android:layout_weight="2"
            >
            <TextView
                style="@style/course_table_menu"
                android:text="第四节\n14:10\n~\n16:00"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_1_4"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_2_4"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_3_4"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_4_4"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_5_4"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_6_4"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_7_4"
                style="@style/course_table_item"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:orientation="horizontal"
            android:layout_weight="2"
            >
            <TextView
                style="@style/course_table_menu"
                android:text="第五节\n16:20\n~\n18:10"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_1_5"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_2_5"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_3_5"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_4_5"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_5_5"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_6_5"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_7_5"
                style="@style/course_table_item"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:orientation="horizontal"
            android:layout_weight="2"
            >
            <TextView
                style="@style/course_table_menu"
                android:text="第六节\n19:00\n~\n20:50"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_1_6"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_2_6"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_3_6"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_4_6"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_5_6"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_6_6"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_7_6"
                style="@style/course_table_item"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:orientation="horizontal"
            android:layout_weight="2"
            >
            <TextView
                style="@style/course_table_menu"
                android:text="第七节\n21:10\n~\n22:00"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_1_7"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_2_7"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_3_7"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_4_7"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_5_7"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_6_7"
                style="@style/course_table_item"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/item_7_7"
                style="@style/course_table_item"
                android:layout_weight="1"/>
        </TableRow>




    </TableLayout>
</LinearLayout>